--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,3 +17,5 @@ vscode:
     - ms-python.debugpy
     - ms-toolsai.vscode-jupyter-cell-tags
     - ms-toolsai.vscode-jupyter-slideshow
+    - ms-python.autopep8
+    - ms-python.flake8
