--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ django-crispy-forms==2.1
 django-resized==1.0.2
 gunicorn==21.2.0
 oauthlib==3.2.2
+pillow==10.2.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
 whitenoise==6.6.0
-Pillow==10.1.0
